--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <div class="entire-page">
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active-alpha"><img src="../img/gymkhana_logo.png" alt=""></a>
+        <a href="#home" class="active-alpha"><img src="../img/culti_logo1.png" alt="" style="width: 100px;height: 80px;"></a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <div class="dropdown-alpha">
