--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
             <ul class="social_footer_ul">
               <li>
 				        <a onMouseOver="this.style.color='#FFF'" onMouseOut="this.style.color='#CCC'" href="" class="footer-icon"><i
-                    class="fa fa-facebook-f"></i></a></li>
+                    class="fa fa-facebook"></i></a></li>
               <li><a onMouseOver="this.style.color='#FFF'" onMouseOut="this.style.color='#CCC'" href=""><i
                     class="fa fa-twitter"></i></a></li>
               <li><a onMouseOver="this.style.color='#FFF'" onMouseOut="this.style.color='#CCC'" href=""><i
@@ -40,7 +40,7 @@
             <li><a href="btl.html">Behind The Lens</a></li>
             <li><a href="beau.html">Beau Monde</a></li>
             <li><a href="gesture.html">Gesture</a></li>
-            <li><a href="litsoc.html">Literary Society</a></li>
+            <li><a href="literary.html">Literary Society</a></li>
           </ul>
           <!--footer_ul_amrc ends here-->
         </div>
