--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -1,20 +1,22 @@
 <!-- Header -->
 <div class="entire-page">
-    <div class="topnav" id="myTopnav">
-        <a href="#home" class="active-alpha"><img src="../img/culti_logo1.png" alt="" style="width: 100px;height: 80px;"></a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+    <div class="topnav" id="myTopnav" style="z-index: 10000000000;">
+        <a href="/" class="active-alpha"><img src="../img/culti_logo.png" alt=""></a>
+        <a href="/" class="hoverit">Home</a>
         <div class="dropdown-alpha">
-            <button class="dropbtn">Dropdown
+            <button class="dropbtn" ><span class="hoverit">Culti Clubs</span>
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="/rdm.html">Rang De Manch</a>
+                <a href="/vibes.html">Vibes</a>
+                <a href="/shuffle.html">Shuffle</a>
+                <a href="infocus.html">Infocus</a>
+                <a href="beau.html">Beau Monde</a>
             </div>
         </div>
-        <a href="#about">About</a>
+        <a href="https://theiithlexicon.wordpress.com/" class="hoverit">IITH Lexicon Blog</a>
+        <a href="/contact" class="hoverit">Contact</a>
         <a href="javascript:void(0);" class="icon-alpha" onclick="responsiveNav()">&#9776;</a>
     </div>
     <div class="main-content">
