--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,14 @@ body{
   margin-top:15px;
   background-color: whitesmoke;
 }
-
+#contact-form{
+  width:70vw;
+  margin-left: 15vw;
+  margin-right: 15vw;
+  max-height: 140vh;
+  margin-bottom: 3vh;
+  margin-top: 3vh;
+}
 * {
   font-family: 'Lato', 'Noto Sans JP',-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
