--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,8 @@
         <div class="col-sm-4 col-md  col-4 col col-12 text-center">
           <img src="/img/culti_logo.png" width="20%">
           <h4 class="headin5_amrc col_white_amrc pt-2 mt-1">Cultural Council</h4>
-          
-						<a href="mailto:council@gymkhana.iith.ac.in" class="fa fa-envelope footer-item" class="text-info" style="color:white">&nbsp;</a>
-						<a href="tel:+91-9999878398" class="fa fa-phone footer-item" class="text-info" style="color:white">&nbsp;</a>
-					
-          
+						<a href="mailto:cult_secy@gymkhana.iith.ac.in" class="fa fa-envelope footer-item" class="text-info" style="color:white">&nbsp;</a>
+						<a href="tel:+91-9543037637" class="fa fa-phone footer-item" class="text-info" style="color:white">&nbsp;</a>
           <div class="container">
             <ul class="social_footer_ul">
               <li>
