--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -8,14 +8,17 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="/rdm.html">Rang De Manch</a>
-                <a href="/vibes.html">Vibes</a>
-                <a href="/shuffle.html">Shuffle</a>
+                <a href="rdm.html">Rang De Manch</a>
+                <a href="vibes.html">Vibes</a>
+                <a href="shuffle.html">Shuffle</a>
                 <a href="infocus.html">Infocus</a>
                 <a href="beau.html">Beau Monde</a>
+                <a href="gesture.html">Gesture</a>
+                <a href="btl.html">Behind the lens</a>
+                <a href="literary.html">Literary Society</a>
             </div>
         </div>
-        <a href="https://theiithlexicon.wordpress.com/" class="hoverit">IITH Lexicon Blog</a>
+        <a href="https://theiithlexicon.wordpress.com/" class="hoverit" target="_blank">IITH Lexicon Blog</a>
         <a href="/contact" class="hoverit">Contact</a>
         <a href="javascript:void(0);" class="icon-alpha" onclick="responsiveNav()">&#9776;</a>
     </div>
