--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -8,14 +8,14 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="rdm.html">Rang De Manch</a>
-                <a href="vibes.html">Vibes</a>
-                <a href="shuffle.html">Shuffle</a>
-                <a href="infocus.html">Infocus</a>
-                <a href="beau.html">Beau Monde</a>
-                <a href="gesture.html">Gesture</a>
-                <a href="btl.html">Behind the lens</a>
-                <a href="literary.html">Literary Society</a>
+                <a href="rdm.html" style="font-size:16px">Rang De Manch</a>
+                <a href="vibes.html" style="font-size:16px">Vibes</a>
+                <a href="shuffle.html" style="font-size:16px">Shuffle</a>
+                <a href="infocus.html" style="font-size:16px">Infocus</a>
+                <a href="beau.html" style="font-size:16px">Beau Monde</a>
+                <a href="gesture.html" style="font-size:16px">Gesture</a>
+                <a href="btl.html" style="font-size:16px">Behind the lens</a>
+                <a href="literary.html" style="font-size:16px">Literary Society</a>
             </div>
         </div>
         <a href="https://theiithlexicon.wordpress.com/" class="hoverit" target="_blank">IITH Lexicon Blog</a>
