--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -23,7 +23,7 @@
         <a href="javascript:void(0);" class="icon-alpha" onclick="responsiveNav()">&#9776;</a>
     </div>
     <div class="main-content">
-        Cultural society
+        Cultural & Literary society
     </div>
 </div>
 
